# tiny_render

./: CMakeLists.txt  main.cpp  model.cpp  model.h  readme.md  vec.hpp
tests/: tests.cpp
